--- a/.github/workflows/obs_sync.yml
+++ b/.github/workflows/obs_sync.yml
@@ -7,19 +7,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      # 创建桶
-      - name: Create Bucket on Huawei Cloud OBS
-        uses: ./utils/obs-helper
-        with:
-          # Access key id
-          access_key: ${{ secrets.OBS_ACCESS_KEY }}
-          # Secret access key
-          secret_key: ${{ secrets.OBS_SECRET_KEY }}
-          endpoint: https://obs.cn-central-221.ovaijisuan.com
-          region: 'cn-central-221'
-          bucket_name: github-test
-          operation_type: createBucket
-          public_read: true
+      # # 创建桶
+      # - name: Create Bucket on Huawei Cloud OBS
+      #   uses: ./utils/obs-helper
+      #   with:
+      #     # Access key id
+      #     access_key: ${{ secrets.OBS_ACCESS_KEY }}
+      #     # Secret access key
+      #     secret_key: ${{ secrets.OBS_SECRET_KEY }}
+      #     endpoint: https://obs.cn-central-221.ovaijisuan.com
+      #     region: 'cn-central-221'
+      #     bucket_name: luojianet-benchmark-public
+      #     operation_type: createBucket
+      #     public_read: true
       
       # 上传场景检索文件至桶
       - name: Upload Scene_Classification File to Huawei Cloud OBS
@@ -31,9 +31,9 @@ jobs:
           secret_key: ${{ secrets.OBS_SECRET_KEY }}
           endpoint: https://obs.cn-central-221.ovaijisuan.com
           region: 'cn-central-221'
-          bucket_name: github-test
+          bucket_name: luojianet-benchmark-public
           local_file_path: ./Scene_Classification
-          obs_file_path: /
+          obs_file_path: /public-model/
           operation_type: upload
           include_self_folder: true
           
@@ -47,9 +47,9 @@ jobs:
           secret_key: ${{ secrets.OBS_SECRET_KEY }}
           endpoint: https://obs.cn-central-221.ovaijisuan.com
           region: 'cn-central-221'
-          bucket_name: github-test
+          bucket_name: luojianet-benchmark-public
           local_file_path: ./Object_Detection
-          obs_file_path: /
+          obs_file_path: /public-model/
           operation_type: upload
           include_self_folder: true
           
@@ -63,9 +63,9 @@ jobs:
           secret_key: ${{ secrets.OBS_SECRET_KEY }}
           endpoint: https://obs.cn-central-221.ovaijisuan.com
           region: 'cn-central-221'
-          bucket_name: github-test
+          bucket_name: luojianet-benchmark-public
           local_file_path: ./Change_Detection
-          obs_file_path: /
+          obs_file_path: /public-model/
           operation_type: upload
           include_self_folder: true
         
@@ -79,9 +79,9 @@ jobs:
           secret_key: ${{ secrets.OBS_SECRET_KEY }}
           endpoint: https://obs.cn-central-221.ovaijisuan.com
           region: 'cn-central-221'
-          bucket_name: github-test
+          bucket_name: luojianet-benchmark-public
           local_file_path: ./Semantic_Segmentation
-          obs_file_path: /
+          obs_file_path: /public-model/
           operation_type: upload 
           include_self_folder: true
           
@@ -95,19 +95,19 @@ jobs:
           secret_key: ${{ secrets.OBS_SECRET_KEY }}
           endpoint: https://obs.cn-central-221.ovaijisuan.com
           region: 'cn-central-221'
-          bucket_name: github-test
+          bucket_name: luojianet-benchmark-public
           local_file_path: ./Multi_View_Reconstruction
-          obs_file_path: /
+          obs_file_path: /public-model/
           operation_type: upload 
           include_self_folder: true
           
       # 从桶内下载文件
       - name: Download from Huawei Cloud OBS
-        uses: ./
+        uses: ./utils/obs-helper
         with:
-          bucket_name: github-test
+          bucket_name: luojianet-benchmark-public
           local_file_path: ${{ github.workspace }}/
-          obs_file_path: Change_Detection/LEVIR-CD/DSIFN_v3/Ascend/1chip/code/README.md
+          obs_file_path: /public-model/Change_Detection/LEVIR-CD/DSIFN_v3/Ascend/1chip/code/README.md
           operation_type: download
       # 删除桶
       #- name: Delete Bucket on Huawei Cloud OBS
