modified:   .github/workflows/Change_Detection_Sync.yml 	modified:   .github/workflows/Multi_View_Reconstruction_Sync.yml 	modified:   .github/workflows/Object_Detection_Sync.yml 	modified:   .github/workflows/Scene_Classification_Sync.yml 	modified:   .github/workflows/Semantic_Segmentation_Sync.yml 	deleted:    Change_Detection/LEVIR-CD/DSIFN_v3/Ascend/1chip/code/image copy.png

--- a/.github/workflows/Semantic_Segmentation_Sync.yml
+++ b/.github/workflows/Semantic_Segmentation_Sync.yml
@@ -12,7 +12,7 @@ jobs:
       
 
         # 上传语义分割文件至桶
-      - name: Upload Semantic_Segmentation File to Huawei Cloud OBS
+      - name: Upload Semantic_Segmentation Files to Huawei Cloud OBS
         uses: ./utils/obs-helper
         with:
           # Access key id
