--- a/.github/workflows/Change_Detection_Sync.yml
+++ b/.github/workflows/Change_Detection_Sync.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v2
              
         # 上传变化检测文件至桶
-      - name: Upload Change_Detection File to Huawei Cloud OBS
+      - name: Upload Change_Detection Files to Huawei Cloud OBS
         uses: ./utils/obs-helper
         with:
           # Access key id
