--- a/.github/workflows/Multi_View_Reconstruction_Sync.yml
+++ b/.github/workflows/Multi_View_Reconstruction_Sync.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v2
       
         # 上传三维重建文件至桶
-      - name: Upload Multi_View_Reconstruction File to Huawei Cloud OBS
+      - name: Upload Multi_View_Reconstruction Files to Huawei Cloud OBS
         uses: ./utils/obs-helper
         with:
           # Access key id
