--- a/.github/workflows/Object_Detection_Sync.yml
+++ b/.github/workflows/Object_Detection_Sync.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v2
 
       # 上传目标检测文件至桶
-      - name: Upload Object_Detection File to Huawei Cloud OBS
+      - name: Upload Object_Detection Files to Huawei Cloud OBS
         uses: ./utils/obs-helper
         with:
           # Access key id
