--- a/.github/workflows/Scene_Classification_Sync.yml
+++ b/.github/workflows/Scene_Classification_Sync.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v2
       
       # 上传场景检索文件至桶
-      - name: Upload Scene_Classification File to Huawei Cloud OBS
+      - name: Upload Scene_Classification Files to Huawei Cloud OBS
         uses: ./utils/obs-helper
         with:
           # Access key id
