--- a/.github/workflows/Mirror_to_Gitee.yml
+++ b/.github/workflows/Mirror_to_Gitee.yml
@@ -35,4 +35,5 @@ jobs:
           force_update: true # optional
           # Enable the debug flag to show detail log
           debug: true # optional
+          cache_path: ''
  
