--- a/.github/workflows/Mirror_to_Gitee.yml
+++ b/.github/workflows/Mirror_to_Gitee.yml
@@ -7,9 +7,6 @@ jobs:
   Mirror_to_Gitee:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      
       - name: Hub Mirror Action.
         # You may pin to the exact commit or the version.
         # uses: Yikun/hub-mirror-action@c00a1ea60dd818bf68f1f5a523b0e362de743229
@@ -28,7 +25,7 @@ jobs:
           # The dst account type. Such as org, user.
           dst_account_type: user # optional, default is 
           # The git clone style, https or ssh.
-          clone_style: https # optional, default is https
+          clone_style: ssh # optional, default is https
           # Only mirror repo in the static list, but don't get from repo api (the white/black list is still available). like 'repo1,repo2,repo3'
           static_list: 'Model_Zoo' # optional, default is 
           # Force to update the destination repo, use '-f' flag do 'git push'
