--- a/.gitignore
+++ b/.gitignore
@@ -128,9 +128,10 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# CKPT files
+# CKPT & output files
 *.ckpt
-
+*.meta 
+ 
 # VSCode settings
 .vscode
 
