Update and rename copyright_header.yml to Copyright_Header.yml

--- a/.github/workflows/Copyright_Header.yml
+++ b/.github/workflows/Copyright_Header.yml
@@ -10,6 +10,7 @@ jobs:
       - name: Fix License Header
         uses: apache/skywalking-eyes/header@main
         with:
+          config: ./.licenserc.yaml
           log: debug
           mode: fix
       - name: Apply Changes
