--- a/.github/workflows/Copyright_Header.yml
+++ b/.github/workflows/Copyright_Header.yml
@@ -7,16 +7,18 @@ jobs:
   ADD_LICENSE:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+      
       - name: Fix License Header
         uses: apache/skywalking-eyes/header@main
         with:
-          config: ./.licenserc.yaml
           log: debug
           mode: fix
+          
       - name: Apply Changes
         uses: EndBug/add-and-commit@v4
         env:
-            GITHUB_TOKEN: ${{ secrets.ADHUAN_MODEL_ZOO_ADD_LICENSE_GITHUB_TOKEN }}
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           author_name: License Bot
           author_email: license_bot@github.com
