modified:   .licenserc.yaml

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -24,6 +24,8 @@ header:
     - '/utils/obs-helper/'
     - 'dist'
     - 'licenses'
+    - '**/*.json'
+    - '**/*.txt'
     - '**/*.md'
     - 'LICENSE'
     - 'NOTICE'
