add path_ignore for licenserc

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -25,7 +25,13 @@ header:
     - 'dist'
     - 'licenses'
     - '**/*.json'
+    - '**/*.log'
+    - '**/*.keep'
     - '**/*.txt'
+    - '**/*.pipeline'
+    - '**/*.gitkeep'
+    - '**/*.prettierrc'
+    - '**/*.js.map'
     - '**/*.md'
     - 'LICENSE'
     - 'NOTICE'
