--- a/.github/workflows/Copyright_Header.yml
+++ b/.github/workflows/Copyright_Header.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   ADD_COPYRIGHT_HEADER:
     runs-on: ubuntu-latest
+    permissions: read-all|write-all
     steps:
       - uses: actions/checkout@v2
       
