--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -21,7 +21,7 @@ header:
       ============================================================================
 
   paths-ignore:
-    - '/utils/obs-helper/'
+    - './utils/obs-helper/'
     - 'dist'
     - 'licenses'
     - '**/*.json'
