--- a/.github/workflows/Copyright_Header.yml
+++ b/.github/workflows/Copyright_Header.yml
@@ -25,3 +25,4 @@ jobs:
           author_name: License Bot
           author_email: license_bot@github.com
           message: 'Automatic application of license header'
+          remove: './.github/workflows/**'
