modified:   .github/workflows/Copyright_Header.yml 	modified:   .licenserc.yaml

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -21,8 +21,8 @@ header:
       ============================================================================
 
   paths-ignore:
-    - './utils/obs-helper/**'
-    - './.github/workflows/**'
+    - '/utils/obs-helper/**'
+    - '/.github/workflows/**'
     - 'dist'
     - 'licenses'
     - '**/*.json'
