--- a/.github/workflows/Copyright_Header.yml
+++ b/.github/workflows/Copyright_Header.yml
@@ -18,11 +18,10 @@ jobs:
           mode: fix
           
       - name: Apply Changes
-        uses: EndBug/add-and-commit@v4
+        uses: EndBug/add-and-commit@v9
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           author_name: License Bot
-          author_email: license_bot@github.com
+          committer_email: 41898282+github-actions[bot]@users.noreply.github.com
           message: 'Automatic application of license header'
-          remove: './.github/workflows/** --force'
