modified:   .github/workflows/Copyright_Header.yml 	modified:   .licenserc.yaml

--- a/.github/workflows/Copyright_Header.yml
+++ b/.github/workflows/Copyright_Header.yml
@@ -22,6 +22,7 @@ jobs:
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          add: "--all -- ':!.github/workflows/*'"
           author_name: License Bot
           committer_email: 41898282+github-actions[bot]@users.noreply.github.com
           message: 'Automatic application of license header'
