--- a/.github/workflows/On_Push_Common.yml
+++ b/.github/workflows/On_Push_Common.yml
@@ -24,6 +24,7 @@ jobs:
 
   Mirror_to_Gitee:
     runs-on: ubuntu-latest
+    needs: Fix_Copyright_Header
     steps:
       - name: Hub Mirror Action
         # You may pin to the exact commit or the version.
