--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -43,7 +43,7 @@ header:
     - 'licenses'
     - '**/ee'
     - '**/stdout'
-    - '**/*.config
+    - '**/*.config'
     - '**/*.json'
     - '**/*.log'
     - '**/*.keep'
