--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -44,6 +44,7 @@ header:
     - '**/ee'
     - '**/stdout'
     - '**/*.config'
+    - '**/*.ipynb'
     - '**/*.json'
     - '**/*.log'
     - '**/*.keep'
